# error-free-differentiable-swap-functions

./: .gitignore  LICENSE  README.md  pyproject.toml
error_free_dsf/: __init__.py  diffsort.py  functional.py  networks.py
src/: main_jigsaw.py  main_multidigit.py  utils.py
src/datasets/: dataset.py  jigsaw.py  svhn_multi.py
src/models/: models_cnn.py  models_jigsaw.py  models_transformer.py
